--- a/package.json
+++ b/package.json
@@ -2,13 +2,40 @@
   "name": "seragorn-r",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://SERAGORN.github.io/website/",
   "dependencies": {
+    "@date-io/date-fns": "^1.1.0",
+    "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
+    "apollo-cache-inmemory": "^1.5.1",
+    "apollo-client": "^2.5.1",
+    "apollo-link-context": "^1.0.17",
+    "apollo-link-http": "^1.5.14",
+    "date-fns": "^2.0.0-alpha.27",
+    "gh-pages": "^2.0.1",
+    "graphql": "^14.1.1",
+    "graphql-tag": "^2.10.1",
+    "ical-generator": "^1.6.0",
+    "material-ui-pickers": "^2.2.4",
+    "moment": "^2.24.0",
     "react": "^16.8.2",
+    "react-apollo": "^2.5.1",
+    "react-big-calendar": "^0.19.0",
+    "react-big-scheduler": "^0.2.6",
+    "react-calendar-material": "^0.1.8",
+    "react-dnd": "^2.6.0",
+    "react-dnd-html5-backend": "^2.6.0",
     "react-dom": "^16.8.2",
-    "react-scripts": "2.1.5"
+    "react-redux": "^6.0.1",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.5",
+    "redux": "^4.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "start": "PORT=3006 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
